@@ -8,19 +8,19 @@ unset TEXINFO_OUTPUT
 ../makeinfo -o cond.out $srcdir/cond.txi || exit 1
 egrep 'This is (ifnothtml|ifinfo|ifnottex) text' cond.out >/dev/null \
   || exit 2
-test `fgrep ' text.' cond.out | wc -l` -eq 3 || exit 3
+test `fgrep -c ' text.' cond.out` -eq 3 || exit 3
 
 # Default HTML output.
 ../makeinfo --no-split --html -o cond.out $srcdir/cond.txi || exit 1
 egrep 'This is (html|ifhtml|ifnotinfo|ifnottex) text' cond.out >/dev/null \
  || exit 2
-test `fgrep ' text.' cond.out | wc -l` -eq 4 || exit 3
+test `fgrep -c ' text.' cond.out` -eq 4 || exit 3
 
 # --ifhtml off, --ifinfo off, --iftex off.
 ../makeinfo --no-ifhtml --no-ifinfo --no-iftex -o cond.out $srcdir/cond.txi || exit 1
 egrep 'This is ifnot(html|info|tex) text' cond.out >/dev/null \
  || exit 2
-test `fgrep ' text.' cond.out | wc -l` -eq 3 || exit 3
+test `fgrep -c ' text.' cond.out` -eq 3 || exit 3
 
 # Do we really need to test all the other permutations?
 
@@ -28,6 +28,6 @@ test `fgrep ' text.' cond.out | wc -l` -eq 3 || exit 3
 ../makeinfo --ifhtml --ifinfo --iftex -o cond.out $srcdir/cond.txi || exit 1
 egrep 'This is (html|ifhtml|ifinfo|tex|iftex) text' cond.out >/dev/null \
  || exit 2
-test `fgrep ' text.' cond.out | wc -l` -eq 5 || exit 3
+test `fgrep -c ' text.' cond.out` -eq 5 || exit 3
 
 rm -f cond.out cond.info
